# Sudoku-Solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic_operations.c  basic_operations.h  basic_solver.c  basic_solver.h  basics.h  main.c  print.c  test.c  test.h
basics/: basic_operations.c  basic_operations.h  poss_pos_operations.c  poss_pos_operations.h  print.c  print.h
examples/: easy_genered.json  hard_generated.json  medium_generated.json  test.c  test.h  very_hard_generated.json
solvers/: basic_solver.c  basic_solver.h  med_solver.c  med_solver.h
